[gd_scene load_steps=5 format=3 uid="uid://kab1f5kaan02"]

[ext_resource type="Script" path="res://scripts/minion.gd" id="1_i26ly"]
[ext_resource type="PackedScene" uid="uid://rs3kasl1q6o0" path="res://models/goolem.glb" id="2_fv0wy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tdid6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4vmtf"]
size = Vector3(1, 1.31274, 1)

[node name="Goolem" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_i26ly")
behaviour = 1
hp = 3
mp = 0
mhp = 3
mmp = 0

[node name="goolem" parent="." instance=ExtResource("2_fv0wy")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="DetectBox" type="Area3D" parent="."]

[node name="DetectShape3D" type="CollisionShape3D" parent="DetectBox"]
transform = Transform3D(15, 0, 0, 0, 2, 0, 0, 0, 15, 0, 2, 0)
shape = SubResource("CylinderShape3D_tdid6")

[node name="HitArea" type="Area3D" parent="."]

[node name="Hitbox" type="CollisionShape3D" parent="HitArea"]
transform = Transform3D(2, 0, 0, 0, 3, 0, 0, 0, 2, 0, 0.878436, 0)
shape = SubResource("BoxShape3D_4vmtf")

[node name="Faker" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.958635, 0)
shape = SubResource("BoxShape3D_4vmtf")

[node name="DmgArea" type="Area3D" parent="." groups=["enemy"]]
collision_mask = 6

[node name="Dmgbox" type="CollisionShape3D" parent="DmgArea"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 1.26552, 0)
shape = SubResource("BoxShape3D_4vmtf")

[connection signal="hurtplayer" from="." to="." method="_on_hurtplayer"]
[connection signal="body_entered" from="DetectBox" to="." method="_on_body_detected"]
[connection signal="body_exited" from="DetectBox" to="." method="_on_detect_exited"]
[connection signal="area_entered" from="HitArea" to="." method="_on_hitbox_entered"]
[connection signal="area_entered" from="DmgArea" to="." method="_on_dmgbox_entered"]
